# sts2engine

./: .gitignore  Cargo.toml  flake.nix  log.temp  rust-toolchain.toml
.cargo/: .config
src/: combat_action.rs  comm.rs  distribution.rs  game_state.rs  main.rs  micro_engine.rs
src/combat_state/: cards.rs  encounter.rs  mod.rs  relics.rs
src/distribution/: full.rs  mod.rs  single.rs
src/game_state/: cards.rs  encounter.rs  mod.rs  relics.rs
src/mcts/: mod.rs
src/run_state/: card_rarity_odds.rs  mcts.rs  mod.rs
