[package]
name = "sts2engine"
version = "0.1.0"
edition = "2024"

[dependencies]
enum-map = "2.7.3"
itertools = "0.14.0"
rand = "0.10.0"
rapidhash = { version = "4.4.1", features = ["unsafe"] }
rayon = "1.11.0"
rcon-client = "0.1.3"
serde = { version = "1.0.228", features = ["serde_derive"] }

[lints.clippy]
enum_glob_use = { level = "deny", priority = -1 }
pedantic = "deny"
nursery = "deny"
unwrap_used = { level = "deny", priority = -1 }
wildcard_enum_match_arm = { level = "deny", priority = -1 }
match_same_arms = { level = "deny", priority = -1 }
option_if_let_else = { level = "allow", priority = -1 }
