[package]
name = "sts2engine"
version = "0.1.0"
edition = "2024"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[dependencies]
approx = "0.5.1"
bumpalo = { version = "3.20.2", features = ["allocator_api", "collections"] }
enum-map = "2.7.3"
itertools = "0.14.0"
rand = "0.10.0"
rapidhash = { version = "4.4.1", features = ["unsafe"] }
rayon = "1.11.0"
rcon-client = "0.1.3"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"

[lints.clippy]
enum_glob_use = { level = "deny", priority = -1 }
pedantic = "deny"
unwrap_used = { level = "deny", priority = -1 }
wildcard_enum_match_arm = { level = "deny", priority = -1 }
match_same_arms = { level = "deny", priority = -1 }
option_if_let_else = { level = "allow", priority = -1 }
